--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 #http ???? ??? ??
 logging.level.org.apache.coyote.http11=debug
 
+#view resolve ??
+spring.mvc.view.prefix=/WEB-INF/views/
+spring.mvc.view.suffix=.jsp
+
